# file-sender

./: .gitignore  LICENSE  README.md  config.example.yml  pyproject.toml  taskfile.yaml
file_sender/: sender.py
